fix: ignore and add modul crud users
